🩹 pagina criamos: 	- corrigindo cores das abas;

--- a/criamos.html
+++ b/criamos.html
@@ -155,7 +155,7 @@
           <!-- Slider main container -->
           <div class="h-full flex flex-col" id="cards-wrapper" style="width: 75%;">
             <div class="h-28 flex flex-row">
-              <a data-tab-toggle="0" class="w-full cursor-pointer hover:brightness-105 h-full text-xl flex text-arms-black bg-arms-white items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="0" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-black bg-arms-white items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform rotate-90" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -168,7 +168,7 @@
                 </svg>
                 BRANDING
               </a>
-              <a data-tab-toggle="1" class="w-full cursor-pointer hover:brightness-105 h-full text-xl flex text-arms-white bg-arms-black-600 items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="1" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -181,7 +181,7 @@
                 </svg>
                 ILUSTRAÇÃO
               </a>
-              <a data-tab-toggle="2" class="w-full cursor-pointer hover:brightness-105 h-full text-xl flex text-arms-white bg-arms-black-700 items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="2" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -194,7 +194,7 @@
                 </svg>
                 DIGITAL STRATEGY
               </a>
-              <a data-tab-toggle="3" class="w-full cursor-pointer hover:brightness-105 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="3" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
