--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="./assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body class="h-screen home">
+  <body class="h-screen home ">
     <header
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none"
     >
@@ -152,299 +152,137 @@
     <main class="swiper light w-full h-full">
       <!-- Swiper -->
       <div class="swiper-wrapper">
-        <!-- Slide 01 -->
-        <div
-          class="swiper-slide w-full h-full flex justify-end items-end relative light"
-        >
-          <!-- height-2/3 (66.6%) -->
-          <div class="w-full h-2/3 flex flex-col sm:flex-row">
-            <!-- width-2/3 (66.6%) -->
-            <div class="flex items-end w-full order-1 sm:order-none sm:w-2/3">
-              <img
-                src="./assets/imgs/arms_01.png"
-                class="absolute left-[20%] top-0 h-screen w-auto z-10 hidden sm:block"
-              />
-              <div
-                class="w-full h-2/3 bg-arms-blue anim-slide anim-slide-up"
-              ></div>
-            </div>
-            <!-- width-1/3 (33.3%) -->
-            <div
-              class="flex flex-col justify-between w-full sm:w-1/3 h-full sm:h-auto anim-slide anim-slide-up"
-            >
-              <div class="flex flex-col px-12 gap-3 mb-6 sm:mb-0">
-                <h5 class="leading-none font-extrabold text-8.5xl">somos</h5>
-                <p class="font-light text-xl">
-                  Seu estúdio especialista em branding ou
-                  <br />aquele braço que faltava para o seu projeto :)
-                </p>
-                <p class="font-light text-xl">
-                  Construímos marcas, cultivamos conexões
-                  <br />e apreciamos resultados.
-                </p>
-              </div>
-              <a href="./criamos.html" class="button bg-white text-arms-black w-full">
-                <div>
-                  NOSSOS SERVIÇOS
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="53"
-                    height="16"
-                    viewBox="0 0 53 16"
-                    fill="currentColor"
-                  >
-                    <g clip-path="url(#clip0_75_278)">
-                      <path
-                        d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
-                        fill="currentColor"
-                      />
-                    </g>
-                    <defs>
-                      <clipPath id="clip0_75_278">
-                        <rect width="53" height="16" fill="currentColor" />
-                      </clipPath>
-                    </defs>
-                  </svg>
+        <!-- Screen 01 - Somos -->
+        <div class="swiper-slide grid h-screen w-screen grid-rows-9 grid-cols-9 bg-arms-black light">
+            <!-- Header -->
+            <div class="row-span-2 col-span-9"></div>
+            <!-- Content -->
+            <div class="row-span-6 col-span-9 grid grid-rows-2 grid-cols-2">
+                <div class="bg-arms-blue row-start-2 col-start-1"></div>
+                <div class="row-start-2 col-start-2 grid grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 px-28">
+                    <div class="col-span-4">
+                        <h5 class="text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title">somos</h5>
+                        <p class="text-arms-white font-light text-xl">
+                            especialista em branding, apaixonados por design e o braço amigo que faltava para o seu projeto.
+                            <br>
+                            <br>
+                            Construímos marcas, cultivamos conexões e apreciamos resultados.
+                        </p>
+                    </div>
                 </div>
-              </a>
             </div>
-          </div>
-        </div>
-        <!-- Slide 02 -->
-        <div
-          class="swiper-slide w-full h-full flex justify-end items-end relative"
-        >
-          <div class="w-full h-2/3 flex flex-col sm:flex-row">
-            <div
-              class="flex items-center order-1 sm:order-none w-2/3 h-full flex-col"
-            >
-              <img
-                src="./assets/imgs/arms_02.png"
-                class="absolute right-0 bottom-0 top-[37%] w-auto z-10 hidden sm:block"
-              />
-              <div
-                class="h-1/2 w-2/3 flex flex-col px-12 gap-3 anim-slide anim-slide-left mb-6 sm:mb-0"
-              >
-                <h5
-                  class="leading-none font-extrabold anim-slide anim-slide-down text-8.5xl"
-                >
-                  capicce!
-                </h5>
-                <p class="font-light text-xl">
-                  Acreditamos que o detalhe faz a diferença.
-                  <br />Respiramos design e prezamos por dar sentido <br />a
-                  tudo que criamos. O capricho faz parte do nosso dia-a-dia.
-                </p>
-              </div>
-              <div
-                class="h-1/2 w-full bg-arms-gray flex flex-col items-start anim-slide anim-slide-up"
-              >
-                <a
-                  class="button bg-arms-black text-white w-1/2"
-                  href="./cases.html"
-                >
-                  <div>
-                    NOSSOS CAPRICHOS
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="53"
-                      height="16"
-                      viewBox="0 0 53 16"
-                      fill="currentColor"
-                    >
-                      <g clip-path="url(#clip0_75_278)">
-                        <path
-                          d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
-                          fill="currentColor"
-                        />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_75_278">
-                          <rect width="53" height="16" fill="currentColor" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-                  </div>
+            <div class="row-span-2 col-span-9 grid grid-cols-2">
+                <div class="bg-arms-blue"></div>
+                <a href="criamos.html" class="text-arms-black bg-white flex pl-28 items-center">
+                    NOSSOS SERVIÇOS
                 </a>
-              </div>
             </div>
-            <div class="w-1/3 bg-arms-yellow anim-slide anim-slide-left"></div>
-          </div>
         </div>
-        <!-- Slide 03 -->
-        <div class="swiper-slide w-full h-full flex justify-end items-end">
-          <div class="w-full h-2/3 flex flex-col sm:flex-row">
-            <img
-              src="./assets/imgs/arms_03.png"
-              class="absolute left-0 bottom-0 max-h-[90%] w-auto z-10 hidden sm:block"
-            />
-            <div class="w-1/3 anim-slide anim-slide-left bg-white"></div>
-            <div
-              class="flex items-end order-1 sm:order-none w-2/3 h-full flex-col relative"
-            >
-              <div
-                class="h-1/2 w-1/2 flex flex-col items-center justify-center gap-3 relative"
-              >
-                <div class="absolute -left-1/3 ml-11">
-                  <h5
-                    class="font-extrabold anim-slide anim-slide-down text-8.5xl -mt-14"
-                  >
-                    projetar
-                  </h5>
-                  <p class="font-light text-xl">
+        <!-- Screen 02 - Capicce -->
+        <div class="swiper-slide grid h-screen w-screen grid-rows-3 grid-cols-9 bg-arms-white">
+            <!-- Header -->
+            <div class="col-span-9"></div>
+            <!-- Content -->
+            <div class="col-start-2 col-span-5 grid grid-rows-2 grid-cols-5">
+                <h5 class="col-span-3 leading-none font-extrabold anim-slide anim-slide-down text-title">capicce!</h5>
+                <span class="row-start-2 col-span-3 font-light text-xl">
+                    Acreditamos que o detalhe sempre faz a diferença.
+                    <br>
                     Respiramos design e prezamos por dar sentido
-                    <br />a tudo que criamos.
-                  </p>
-                </div>
-              </div>
-              <div class="flex flex-row h-1/2 w-full">
-                <div
-                  class="w-1/2 h-full bg-white anim-slide anim-slide-up"
-                ></div>
-                <div class="w-1/2 h-full relative">
-                  <a
-                    class="button bg-arms-purple text-white absolute -left-1/3 right-0"
-                  >
-                    <div>
-                      CONFIRA NOSSO TRAÇO
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="53"
-                        height="16"
-                        viewBox="0 0 53 16"
-                        fill="currentColor"
-                      >
-                        <g clip-path="url(#clip0_75_278)">
-                          <path
-                            d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
-                            fill="currentColor"
-                          />
-                        </g>
-                        <defs>
-                          <clipPath id="clip0_75_278">
-                            <rect width="53" height="16" fill="currentColor" />
-                          </clipPath>
-                        </defs>
-                      </svg>
-                    </div>
-                  </a>
-                </div>
-              </div>
+                    <br>
+                    a tudo que criamos.
+                    <br>
+                    De um jeito funcional e com a estética apurada,
+                    <br>
+                    o capricho faz parte do nosso dia-a-dia. 
+                </span>
             </div>
-          </div>
+            <div class="col-span-3 bg-arms-yellow"></div>
+            
+            <div class="bg-arms-gray grid grid-rows-3">
+                <div class="row-span-1 bg-arms-black"></div>
+            </div>
+            <div class="col-span-5 bg-arms-gray grid grid-cols-5 grid-rows-3">
+                <a href="work.html" class="col-span-2 row-span-1 bg-arms-black text-white flex items-center">
+                    NOSSOS CAPRICHOS
+                </a>
+            </div>
+            <div class="col-span-3 bg-arms-yellow"></div>
         </div>
-        <!-- Slide 04 -->
-        <div
-          class="swiper-slide w-full h-full flex justify-end items-end relative light"
-        >
-          <div class="w-full h-4/5 flex flex-col sm:flex-row items-end">
-            <img
-              src="./assets/imgs/arms_04.png"
-              class="absolute left-4pc top-0 w-auto z-10 hidden sm:block pointer-events-none"
-            />
-            <div class="w-1/2 h-3/4 bg-arms-yellow flex items-end justify-end anim-slide anim-slide-up">
-              <div class="h-1/2 w-1/2 bg-white"></div>
+        <!-- Screen 03 - Método -->
+        <div class="swiper-slide grid h-screen w-screen grid-rows-3 grid-cols-9 bg-arms-yellow">
+            <!-- Header -->
+            <div class="col-span-9"></div>
+
+            <!-- Content -->
+            <div class="col-span-3 bg-arms-white"></div>
+            <div class="col-span-6 grid grid-cols-4 grid-rows-2 ps-11">
+                <h5 class="col-start-2 col-span-2 leading-none font-extrabold anim-slide anim-slide-down text-title">método</h5>
+                <span class="col-start-2 col-span-2 font-light text-xl">
+                    Do logo ao tipo, da identidade ao visual.
+                    <br>
+                    Os processos aqui são fragmentados em etapas
+                    <br>
+                    para cada profissional extrair o seu melhor em cada job,
+                    <br>
+                    refletindo diretamente na qualidade da entrega.
+                </span>
             </div>
-            <div class="w-1/2 h-full flex flex-col justify-between">
-              <div class="px-12 h-1/4 flex flex-col justify-end">
-                <h5
-                  class="leading-none font-extrabold anim-slide anim-slide-down text-8.5xl"
-                >
-                  conta
-                </h5>
-                <p class="font-light text-xl mb-8">
-                  pra gente! Adoramos ouvir histórias
-                  <br />e amamos fazer parte delas.
-                </p>
-              </div>
-              <div class="h-3/4 flex flex-col">
-                <form class="w-full h-1/2 flex items-center">
-                  <div class="w-1/2 px-12 flex flex-row flex-wrap gap-6 mb-6">
-                    <input
-                      type="text"
-                      name="nome"
-                      id="input_nome"
-                      class="border-0 bg-transparent text-white border-b border-arms-light-gray w-full text-xl"
-                      placeholder="nome:"
-                    />
-                    <div class="flex flex-row gap-6 w-full">
-                      <input
-                        type="phone"
-                        name="cel"
-                        id="input_cel"
-                        class="border-0 bg-transparent text-white border-b border-arms-light-gray w-full text-xl"
-                        placeholder="cel:"
-                      />
-                      <select
-                        name="serviço"
-                        class="border-0 bg-transparent border-b border-arms-light-gray w-full text-xl"
-                      >
-                        <option>serviço</option>
-                        <option>Opção 02</option>
-                        <option>Opção 03</option>
-                        <option>Opção 04</option>
-                      </select>
-                    </div>
-                    <input
-                      type="text"
-                      name="nome"
-                      id="input_nome"
-                      class="border-0 bg-transparent text-white border-b border-arms-light-gray w-full text-xl"
-                      placeholder="nome:"
-                    />
-                  </div>
-                </form>
-                <div class="w-full h-1/2">
-                  <button
-                    type="submit"
-                    class="button bg-arms-blue text-white w-full"
-                  >
-                    <div>
-                      ENVIAR
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="53"
-                        height="16"
-                        viewBox="0 0 53 16"
-                        fill="currentColor"
-                      >
-                        <g clip-path="url(#clip0_75_278)">
-                          <path
-                            d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
-                            fill="currentColor"
-                          />
-                        </g>
-                        <defs>
-                          <clipPath id="clip0_75_278">
-                            <rect width="53" height="16" fill="currentColor" />
-                          </clipPath>
-                        </defs>
-                      </svg>
-                    </div>
-                  </button>
-                  <div class="bg-white h-full flex flex-row items-tart gap-6 anim-slide anim-slide-right">
-                    <div class="p-16 text-arms-black">
-                      <h6 class="font-bold">OFFICE</h6>
-                      <span class="block text-arms-black">
-                        Av. Centenário, 484
-                        <br />São Dimas - Piracicaba
-                      </span>
-                    </div>
-                    <div class="p-16 text-arms-black">
-                      <h6 class="font-bold">CONTACT</h6>
-                      <span class="block text-arms-black">
-                        conta@arms.design
-                      </span>
-                    </div>
-                  </div>
+
+            <!-- Footer -->
+            <div class="col-span-6 bg-white grid grid-cols-4 grid-rows-3">
+                <a href="fluxo.html" class="col-start-4 bg-arms-purple flex items-center ps-11 text-arms-white">
+                    COMO CRIAMOS
+                </a>
+            </div>
+            <div class="col-span-3 bg-arms-yellow grid grid-rows-3">
+                <div class="bg-arms-purple"></div>
+            </div>
+        </div>
+        <!-- Screen 03 - Conte -->
+        <div class="swiper-slide grid h-screen w-screen grid-rows-2 grid-cols-2 bg-arms-black">
+            <div class="col-start-2 flex flex-col justify-end ps-11">
+                <h5 class="leading-none font-extrabold anim-slide anim-slide-down text-title text-arms-white">conte</h5>
+                <span class="font-light text-xl text-arms-white">
+                    pra gente! Adoramos ouvir histórias
+                    <br>
+                    e amamos fazer parte delas.
+                </span>
+            </div>
+            <div class="row-start-2 bg-arms-yellow grid grid-rows-2 grid-cols-2">
+                <div class="col-start-2 row-start-2 bg-arms-white"></div>
+            </div>
+            <div class="row-start-2 grid grid-rows-2 grid-cols-3">
+                <div class="col-span-2">
+
                 </div>
-              </div>
+                <div class="grid grid-rows-5 col-span-3">
+                    <div class="bg-arms-blue row-span-2">
+        
+                    </div>
+                    <div class="bg-arms-white row-span-3 grid grid-cols-3">
+                        <div class="flex flex-col items-start justify-center text-arms-black">
+                            <b>OFFICE</b>
+                            <p>
+                                Rua Regente Feijó, 673
+                                <br>
+                                Centro - Piracicaba-SP
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-start justify-center text-arms-black">
+                            <b>CONTACT</b>
+                            <p>
+                                conte@arms.design
+                                <br>
+                                19 96404.4711
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
       </div>
     </main>
-    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./assets/js/swiper_home.js" type="module"></script>
   </body>
