✨ Criação e otimizacao: 	- Criação pagina visualizacao detalhada work 	- Adição SVGs setas em home 	- Otimização grid system home para remoção de linhas invisiveis 	- Adição SVGs setas em work.html 	- Adição animação anim-slide em home

--- a/index.html
+++ b/index.html
@@ -153,28 +153,24 @@
       <!-- Swiper -->
       <div class="swiper-wrapper">
         <!-- Screen 01 - Somos -->
-        <div class="swiper-slide grid h-screen w-screen grid-rows-9 grid-cols-9 bg-arms-black light">
-            <!-- Header -->
-            <div class="row-span-2 col-span-9"></div>
+        <div class="swiper-slide grid h-screen w-screen grid-rows-2 grid-cols-2 bg-arms-black light">
             <!-- Content -->
-            <div class="row-span-6 col-span-9 grid grid-rows-2 grid-cols-2">
-                <div class="bg-arms-blue row-start-2 col-start-1"></div>
-                <div class="row-start-2 col-start-2 grid grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 px-28">
-                    <div class="col-span-4">
-                        <h5 class="text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title">somos</h5>
-                        <p class="text-arms-white font-light text-xl">
-                            especialista em branding, apaixonados por design e o braço amigo que faltava para o seu projeto.
-                            <br>
-                            <br>
-                            Construímos marcas, cultivamos conexões e apreciamos resultados.
-                        </p>
-                    </div>
+            <div class="bg-arms-blue row-start-2 col-start-1 anim-slide"></div>
+            <div class="row-start-2 col-start-2 grid grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 grid-rows-4">
+                <div class="col-span-5 row-span-3 px-28">
+                    <h5 class="text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title">somos</h5>
+                    <p class="text-arms-white font-light text-xl">
+                        especialista em branding, apaixonados por design e o braço amigo que faltava para o seu projeto.
+                        <br>
+                        <br>
+                        Construímos marcas, cultivamos conexões e apreciamos resultados.
+                    </p>
                 </div>
-            </div>
-            <div class="row-span-2 col-span-9 grid grid-cols-2">
-                <div class="bg-arms-blue"></div>
-                <a href="criamos.html" class="text-arms-black bg-white flex pl-28 items-center">
+                <a href="criamos.html" class="col-span-4 xl:col-span-5 2xl:col-span-6 text-black bg-white flex pl-28 items-center gap-4 text-lg anim-slide anim-slide-up">
                     NOSSOS SERVIÇOS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="9" viewBox="0 0 32 9" fill="currentColor">
+                      <path d="M32 4.48623L27.1335 0L26.2145 0.84865L29.5402 3.91408H0V5.11464H29.5207L26.2275 8.15135L27.1465 9L32 4.52573L31.9792 4.50539L32 4.48623Z" fill="currentColor"/>
+                    </svg>
                 </a>
             </div>
         </div>
@@ -197,15 +193,17 @@
                     o capricho faz parte do nosso dia-a-dia. 
                 </span>
             </div>
-            <div class="col-span-3 bg-arms-yellow"></div>
+            <div class="col-span-3 bg-arms-yellow anim-slide anim-slide-up"></div>
             
-            <div class="bg-arms-gray grid grid-rows-3">
-                <div class="row-span-1 bg-arms-black"></div>
-            </div>
-            <div class="col-span-5 bg-arms-gray grid grid-cols-5 grid-rows-3">
-                <a href="work.html" class="col-span-2 row-span-1 bg-arms-black text-white flex items-center">
-                    NOSSOS CAPRICHOS
-                </a>
+            <div class="bg-arms-gray grid grid-rows-3 col-span-6 grid-cols-2">
+              <a href="work.html" class="row-span-1 bg-arms-black text-white anim-slide anim-slide-up grid grid-cols-3">
+                <div class="col-start-2 col-span-2 flex items-center gap-4 text-lg">
+                  NOSSOS CAPRICHOS
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="9" viewBox="0 0 32 9" fill="currentColor">
+                    <path d="M32 4.48623L27.1335 0L26.2145 0.84865L29.5402 3.91408H0V5.11464H29.5207L26.2275 8.15135L27.1465 9L32 4.52573L31.9792 4.50539L32 4.48623Z" fill="currentColor"/>
+                  </svg>
+                </div>
+              </a>
             </div>
             <div class="col-span-3 bg-arms-yellow"></div>
         </div>
@@ -231,12 +229,15 @@
 
             <!-- Footer -->
             <div class="col-span-6 bg-white grid grid-cols-4 grid-rows-3">
-                <a href="fluxo.html" class="col-start-4 bg-arms-purple flex items-center ps-11 text-arms-white">
+                <a href="fluxo.html" class="col-start-4 bg-arms-black flex items-center ps-11 text-arms-white gap-4 text-lg">
                     COMO CRIAMOS
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="9" viewBox="0 0 32 9" fill="currentColor">
+                      <path d="M32 4.48623L27.1335 0L26.2145 0.84865L29.5402 3.91408H0V5.11464H29.5207L26.2275 8.15135L27.1465 9L32 4.52573L31.9792 4.50539L32 4.48623Z" fill="currentColor"/>
+                    </svg>
                 </a>
             </div>
             <div class="col-span-3 bg-arms-yellow grid grid-rows-3">
-                <div class="bg-arms-purple"></div>
+                <div class="bg-arms-black"></div>
             </div>
         </div>
         <!-- Screen 03 - Conte -->
