--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
             </defs>
           </svg>
         </a>
-        <a class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+        <a href="index.html" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
           <svg
           xmlns="http://www.w3.org/2000/svg"
           width="53"
@@ -84,6 +84,12 @@
 
       <!-- Social Icons -->
       <div class="flex flex-row gap-4 items-center relative pr-12">
+        <p class="text-2xl text-white">capricho</p>
+        <div class="mr-16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="2" viewBox="0 0 34 2" fill="currentColor">
+            <path d="M0 1H34" stroke="currentColor"/>
+          </svg>
+        </div>
         <a
           class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
           href=""
@@ -233,14 +239,41 @@
                 </div>
             </div>
             <div class="grid grid-rows-5 bg-arms-yellow">
-                <div class="row-span-3 px-14">
+                <div class="row-span-3 px-14 text-arms-black">
                     <b class="text-2xl">Loren Ipsun Title</b>
                     <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div> 
                 <div class="row-span-2 grid grid-cols-2 grid-rows-2">
-                    <div class="bg-arms-black"></div>
-                    <div class="bg-arms-full-black"></div>
-                    <div class="text-xl font-medium col-span-2 bg-arms-white flex items-center justify-start px-14">VER TODOS</div>
+                    <div class="bg-arms-black flex items-center justify-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="53" height="16" viewBox="0 0 53 16" fill="none">
+                        <g clip-path="url(#clip0_134_53)">
+                          <path d="M6.97243e-07 8.02447L8.06008 16L9.58223 14.4913L4.07411 9.04162L53 9.04163L53 6.9073L4.10636 6.9073L9.56072 1.50871L8.03858 -3.93065e-06L7.03382e-07 7.95424L0.0343978 7.99042L6.97243e-07 8.02447Z" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_134_53">
+                            <rect width="53" height="16" fill="white" transform="translate(53 16) rotate(-180)"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                    </div>
+                    <div class="bg-arms-full-black flex items-center justify-center">
+                      <svg class="rotate-180" xmlns="http://www.w3.org/2000/svg" width="53" height="16" viewBox="0 0 53 16" fill="none">
+                        <g clip-path="url(#clip0_134_53)">
+                          <path d="M6.97243e-07 8.02447L8.06008 16L9.58223 14.4913L4.07411 9.04162L53 9.04163L53 6.9073L4.10636 6.9073L9.56072 1.50871L8.03858 -3.93065e-06L7.03382e-07 7.95424L0.0343978 7.99042L6.97243e-07 8.02447Z" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_134_53">
+                            <rect width="53" height="16" fill="white" transform="translate(53 16) rotate(-180)"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                    </div>
+                    <a href="list_work.html" class="text-xl font-medium col-span-2 bg-arms-white flex items-center justify-start px-14 gap-4">
+                      VER TODOS
+                      <svg xmlns="http://www.w3.org/2000/svg" width="53" height="16" viewBox="0 0 53 16" fill="none">
+                        <path d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z" fill="#201F1F"/>
+                      </svg>
+                    </a>
                 </div>
             </div>
         </div>
