✨ Finalizando animacao abas / adicionando redirecionamentos

--- a/work.html
+++ b/work.html
@@ -190,7 +190,8 @@
                   <!-- Additional required wrapper -->
                   <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div
+                    <a
+                      href="single_work.html"
                       class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
@@ -198,8 +199,9 @@
                         <h6 class="text-2xl">Brand Identity</h6>
                         <span>LANEVO</span>
                       </div>
-                    </div>
-                    <div
+                    </a>
+                    <a
+                      href="single_work.html"
                       class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
@@ -207,8 +209,9 @@
                         <h6 class="text-2xl">Brand Identity</h6>
                         <span>LANEVO</span>
                       </div>
-                    </div>
-                    <div
+                    </a>
+                    <a
+                      href="single_work.html"
                       class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
@@ -216,8 +219,9 @@
                         <h6 class="text-2xl">Brand Identity</h6>
                         <span>LANEVO</span>
                       </div>
-                    </div>
-                    <div
+                    </a>
+                    <a
+                      href="single_work.html"
                       class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
@@ -225,8 +229,9 @@
                         <h6 class="text-2xl">Brand Identity</h6>
                         <span>LANEVO</span>
                       </div>
-                    </div>
-                    <div
+                    </a>
+                    <a
+                      href="single_work.html"
                       class="flex items-end justify-stretch swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-gradient-to-t from-arms-full-black to-transparent"
                     >
                       <div class="flex-grow w-full h-full absolute z-10" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
@@ -234,7 +239,7 @@
                         <h6 class="text-2xl">Brand Identity</h6>
                         <span>LANEVO</span>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
             </div>
@@ -244,7 +249,7 @@
                     <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div> 
                 <div class="row-span-2 grid grid-cols-2 grid-rows-2">
-                    <div class="bg-arms-black flex items-center justify-center">
+                    <div id="button-slide-prev" class="cursor-pointer bg-arms-black flex items-center justify-center">
                       <svg xmlns="http://www.w3.org/2000/svg" width="53" height="16" viewBox="0 0 53 16" fill="none">
                         <g clip-path="url(#clip0_134_53)">
                           <path d="M6.97243e-07 8.02447L8.06008 16L9.58223 14.4913L4.07411 9.04162L53 9.04163L53 6.9073L4.10636 6.9073L9.56072 1.50871L8.03858 -3.93065e-06L7.03382e-07 7.95424L0.0343978 7.99042L6.97243e-07 8.02447Z" fill="white"/>
@@ -256,7 +261,7 @@
                         </defs>
                       </svg>
                     </div>
-                    <div class="bg-arms-full-black flex items-center justify-center">
+                    <div id="button-slide-next" class="cursor-pointer bg-arms-full-black flex items-center justify-center">
                       <svg class="rotate-180" xmlns="http://www.w3.org/2000/svg" width="53" height="16" viewBox="0 0 53 16" fill="none">
                         <g clip-path="url(#clip0_134_53)">
                           <path d="M6.97243e-07 8.02447L8.06008 16L9.58223 14.4913L4.07411 9.04162L53 9.04163L53 6.9073L4.10636 6.9073L9.56072 1.50871L8.03858 -3.93065e-06L7.03382e-07 7.95424L0.0343978 7.99042L6.97243e-07 8.02447Z" fill="white"/>
