--- a/criamos.html
+++ b/criamos.html
@@ -176,8 +176,11 @@
         <div class="absolute right-0 bottom-0 flex flex-row justify-end" style="width: 93%; height: 75%;">
           <!-- Slider main container -->
           <div class="h-full flex flex-col" id="cards-wrapper" style="width: 75%;">
-            <div class="h-28 flex flex-row">
-              <a data-tab-toggle="0" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-black bg-arms-white items-center justify-center gap-4 transition-all">
+            <div class="h-28 flex flex-row bg-arms-black relative">
+              <div class="absolute w-1/4 h-full bg-white z-10 tab-indicator">
+
+              </div>
+              <a data-tab-toggle="0" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-black active items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform rotate-90" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -188,9 +191,9 @@
                     </clipPath>
                   </defs>
                 </svg>
-                BRANDING
+                <span>BRANDING</span>
               </a>
-              <a data-tab-toggle="1" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="1" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -201,9 +204,9 @@
                     </clipPath>
                   </defs>
                 </svg>
-                ILUSTRAÇÃO
+                <span>ILUSTRAÇÃO</span>
               </a>
-              <a data-tab-toggle="2" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="2" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -214,9 +217,9 @@
                     </clipPath>
                   </defs>
                 </svg>
-                DIGITAL STRATEGY
+                <span>DIGITAL STRATEGY</span>
               </a>
-              <a data-tab-toggle="3" class="w-full cursor-pointer hover:bg-arms-black-600 h-full text-xl flex text-arms-white bg-arms-black items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="3" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -227,7 +230,7 @@
                     </clipPath>
                   </defs>
                 </svg>
-                SOCIAL MEDIA
+                <span>SOCIAL MEDIA</span>
               </a>
             </div>
             <div class="h-full bg-white px-24 py-10 grid grid-rows-3 grid-cols-3">
@@ -332,16 +335,14 @@
               </p>
             </div>
             <div class="flex flex-col w-full" id="card-nagivation-wrapper">
-              <a href="./index.html" id="button-slide-prev" class="button bg-arms-purple text-arms-white h-28">
+              <a href="./work.html" id="button-slide-prev" class="button bg-arms-purple text-arms-white h-28">
                 <div>
-                  VOLTAR AO SITE
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="53"
                     height="16"
                     viewBox="0 0 53 16"
                     fill="currentColor"
-                    class="rotate-180"
                   >
                     <g clip-path="url(#clip0_75_278)">
                       <path
@@ -355,6 +356,7 @@
                       </clipPath>
                     </defs>
                   </svg>
+                  CASES
                 </div>
               </a>
             </div>
