Atualizacoes gerais - Página "criamos"     - Adicionar "hover" com fundo mais claro     - Adicionar indicador de página     - Interação ao clicar em voltar     - Ajustando largura seção abas     - Ajustando repartição da estrutura para alinhar abas com fundo roxo
    - Adicionando ajuste fino em fundo roxo

- Página "work"
    - Adicionar navegação por setas
    - Acicionar loopback para navegação por setas
    - Ajuste fino em seção superior de quadrado amarelo (linha de divisão aparente)
    - Correção interação ao clicar em voltar (redirecionar para seção correta)

- Página "todos os works"
    - Finalização rodapé
    - Alteração logo ARMS para 🐙ARMS
    [] Adicionar indicador de filtragem
    [] Simular alteração de filtro

- Página "home"
    - Adicionar imagens com aspect-ratio
    - Adicionar regra de escalonamento fixado em imagens
    - Finalizar botão de ação seção "conte"
    - Adicionar formulário em seção "conte"
    - Adicionando integração de scroll com alteração de URL
    - Adicionando tratamento de caracteres especiais em alteração de URL ("método")
    - Otimizando hash navigation

--- a/criamos.html
+++ b/criamos.html
@@ -58,7 +58,7 @@
             </defs>
           </svg>
         </a>
-        <a class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
           <svg
           xmlns="http://www.w3.org/2000/svg"
           width="53"
@@ -84,6 +84,12 @@
 
       <!-- Social Icons -->
       <div class="flex flex-row gap-4 items-center relative pr-12">
+        <p class="text-2xl text-white">o estúdio</p>
+        <div class="mr-16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="2" viewBox="0 0 34 2" fill="currentColor">
+            <path d="M0 1H34" stroke="currentColor"/>
+          </svg>
+        </div>
         <a
           class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
           href=""
@@ -169,14 +175,20 @@
     </header>
     <!-- Slider main container -->
     <main class="w-full h-full flex flex-col sm:flex-row items-end">
-      <div class="w-full h-2/3 flex flex-col sm:flex-row items-end relative">
-        <div class="w-1/2 h-full text-arms-white">
-          <h5 class=" text-center font-bold leading-none -mt-10 mb-20">criamos</h5>
+      <div class="w-full h-2/3 grid grid-cols-9 items-end relative">
+
+        <div class="h-full text-arms-white col-span-5">
+          <h5 class=" text-center font-bold leading-none -mt-10 mb-20 anim-slide anim-slide-down">criamos</h5>
         </div>
-        <div class="absolute right-0 bottom-0 flex flex-row justify-end" style="width: 93%; height: 75%;">
+
+        <div class="h-full transition-colors ease-in-out bg-arms-blue anim-slide anim-slide-up col-span-4" style="margin-left: 12px">
+
+        </div>
+
+        <div class="absolute right-0 bottom-0 grid grid-cols-4 w-full" style="height: 75%;">
           <!-- Slider main container -->
-          <div class="h-full flex flex-col" id="cards-wrapper" style="width: 75%;">
-            <div class="h-28 flex flex-row bg-arms-black relative">
+          <div class="h-full flex flex-col anim-slide col-span-3" id="cards-wrapper">
+            <div class="h-32 flex flex-row bg-arms-black relative">
               <div class="absolute w-1/4 h-full bg-white z-10 tab-indicator">
 
               </div>
@@ -193,7 +205,7 @@
                 </svg>
                 <span>BRANDING</span>
               </a>
-              <a data-tab-toggle="1" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="1" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all hover:bg-arms-black-700">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -206,7 +218,7 @@
                 </svg>
                 <span>ILUSTRAÇÃO</span>
               </a>
-              <a data-tab-toggle="2" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="2" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all hover:bg-arms-black-700">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -219,7 +231,7 @@
                 </svg>
                 <span>DIGITAL STRATEGY</span>
               </a>
-              <a data-tab-toggle="3" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all">
+              <a data-tab-toggle="3" class="w-full z-20 cursor-pointer h-full text-xl flex text-arms-white items-center justify-center gap-4 transition-all hover:bg-arms-black-700">
                 <svg class="transition-transform" xmlns="http://www.w3.org/2000/svg" width="18" height="14" viewBox="0 0 18 14" fill="none">
                   <g clip-path="url(#clip0_218_172)">
                     <path d="M18 6.97859L11.0085 -4.81197e-07L9.68815 1.32012L14.466 6.09044L-3.45819e-07 6.08858L-2.64187e-07 7.95611L14.438 7.95611L9.7068 12.6799L11.0271 14L18 7.04003" fill="currentColor"/>
@@ -321,7 +333,7 @@
             </div>
           </div>
           <!-- Slide navigation -->
-          <div class="h-full flex flex-col justify-between items-start z-10 pt-24" style="width: 25%">
+          <div class="h-full flex flex-col justify-between items-start z-10 pt-24 anim-slide anim-slide-up">
             <div class="flex flex-col gap-3 px-12" id="card-title-wrapper">
               <h4 class="text-2xl font bold text-arms-white">
                 Oque é Branging?
@@ -362,12 +374,10 @@
             </div>
           </div>
         </div>
-        <div id="background-square" class="h-full transition-colors ease-in-out bg-arms-blue absolute right-0 bottom-0 -z-10" style="width: 46.5%">
-
-        </div>
       </div>
     </main>
     <!-- Scripts -->
     <script src="./assets/js/tabs_criamos.js" type="module"></script>
+    <script src="./assets/js/auto_anim_slide.js" type="module"></script>
   </body>
 </html>
