--- a/fluxo.html
+++ b/fluxo.html
@@ -20,7 +20,7 @@
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none dark"
     >
       <div>
-        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
+        <a href="./index.html#método" class="cursor-pointer pointer-events-auto" id="logo">
           <!-- Logo -->
           <svg
             width="64"
@@ -58,7 +58,7 @@
             </defs>
           </svg>
         </a>
-        <a class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+        <a href="./index.html#método" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
           <svg
           xmlns="http://www.w3.org/2000/svg"
           width="53"
@@ -220,7 +220,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./assets/js/swiper_cases.js" type="module"></script>
+    <script src="./assets/js/auto_anim_slide.js" type="module"></script>
     <!-- <script src="./assets/js/cards_cases.js" type="module"></script> -->
   </body>
 </html>
