--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
       <div>
-        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
+        <a href="./index.html#capricho" class="cursor-pointer pointer-events-auto" id="logo">
           <!-- Logo -->
           <svg
             width="64"
@@ -58,7 +58,7 @@
             </defs>
           </svg>
         </a>
-        <a href="index.html" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+        <a href="index.html#capricho" class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
           <svg
           xmlns="http://www.w3.org/2000/svg"
           width="53"
@@ -182,7 +182,7 @@
         <div class="col-span-3 grid grid-cols-3">
             <h5 class="col-start-2 col-span-2 text-arms-white leading-none font-extrabold anim-slide anim-slide-down text-title">work</h5>
         </div>
-        <div class="col-span-3 bg-arms-yellow"></div>
+        <div class="col-span-3 bg-arms-yellow anim-slide anim-slide-left" style="margin-bottom: -1px;"></div>
 
         <div class="grid col-span-6 grid-cols-4 row-span-3">
             <div class="col-span-3 bg-arms-light-gray">
@@ -243,7 +243,7 @@
                   </div>
                 </div>
             </div>
-            <div class="grid grid-rows-5 bg-arms-yellow">
+            <div class="grid grid-rows-5 bg-arms-yellow anim-slide anim-slide-left">
                 <div class="row-span-3 px-14 text-arms-black">
                     <b class="text-2xl">Loren Ipsun Title</b>
                     <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -285,6 +285,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./assets/js/swiper_cases.js" type="module"></script>
+    <script src="./assets/js/auto_anim_slide.js" type="module"></script>
     <!-- <script src="./assets/js/cards_cases.js" type="module"></script> -->
   </body>
 </html>
